k8s/talep-takip-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talep-takip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: talep-takip
  template:
    metadata:
      labels:
        app: talep-takip
    spec:
      containers:
      - name: talep-takip
        image: tkkaray/talep-takip:v1
        ports:
        - containerPort: 8000
        command:
        - gunicorn
        - config.wsgi:application
        - --bind
        - 0.0.0.0:8000
        volumeMounts:
        - name: media-storage
          mountPath: /app/mediafiles
      volumes:
      - name: media-storage
        persistentVolumeClaim:
          claimName: talep-takip-media-pvc
