k8s/talep-takip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talep-takip
spec:
  type: NodePort
  selector:
    app: talep-takip
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30000
