k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talep-takip-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # SSL'i devre dışı bırakıyoruz
spec:
  rules:
    - host: talep-takip.local  # Local domain kullanıyoruz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: talep-takip
                port:
                  number: 80
